--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Bootstrap</string>
+    <string name="image_description">User Avatar</string>
 </resources>
